# shipvitals

./: .gitignore  .npmignore  .pre-commit-hooks.yaml  .shipvitals-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ACTION.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VALIDATION.md  action.yml  index.html  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agents/: client-marketplace-auditor.md  falsification-auditor.md  product-promise-auditor.md  release-manager.md  security-baseline-auditor.md  technical-gate-auditor.md  visual-qa-auditor.md
assets/: ASSET_NOTES.md  site.css  site.webmanifest
benchmarks/: BENCHMARK_PLAN.md  index.html
case-studies/: README.md
cli/: package.json
compare/: index.html
docs/: ADAPTERS.md  ADOPTION_QUALITY_BAR.md  ADVERSARIAL_BENCHMARKS.md  ARCHITECTURE.md  COMPARISON.md  COMPETITIVE_EDGE.md  COMPETITIVE_MATRIX.md  COMPETITOR_SUPERSET_MAP.md  DEPLOYMENT_READINESS.md  DIRECTORY_SUBMISSIONS.md  EDITORIAL_STANDARD.md  EVALUATION_METHOD.md  EVIDENCE.md  FAQ.md  INSTALLATION.md  LAUNCH_PLAYBOOK.md  ONE_COMMAND_INSTALL.md  PERMISSIONS.md  POSITIONING.md  PREMIUM_RELEASE_STANDARD.md  PUBLISHING.md  QUALITY_STANDARD.md  RELEASE_MATURITY.md  RELEASE_PROOF_PROTOCOL.md  RELEASE_STANDARD.md  SCORING_RUBRIC.md  TRUST_AND_SAFETY.md  WHY_SHIPVITALS.md
evals/: README.md  rubric.json
registry/: listing.md  skill-card.md
schemas/: config.schema.json  evidence-manifest.schema.json  evidence.schema.json  (+1 more)
(+234 files in other folders)
